--- a/style.css
+++ b/style.css
@@ -1,16 +1,48 @@
 body{
-
+    overflow-x: hidden;
+    height: 100vh;
+    width: 100vw;
 }
+
+
+/*
+Clases para lineas verticas 
+de la pagina
+.side-line-r{
+    position: fixed;
+    margin: 0px;
+    padding: 0px;
+    left: 0;
+    z-index: 100;
+    height: 100%;
+}
+
+.side-line-l{
+    position: fixed;
+    margin: 0px;
+    padding: 0px;
+    right: 0;
+    z-index: 100;
+    height: 100%;
+
+}*/
 
 p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+hr{
+    border: 10px solid rgb(222, 139, 72);
+    margin: 0px;
+}
+
 h1{
-    margin-top: 10px; 
     padding-top: 30px;
+    margin-bottom: 0px;
+    padding-bottom: 30px;
     text-align: center;
     font-family: 'Bebas Neue';
+    background-color: rgb(3, 9, 36);
     color: rgb(222, 139, 72);
 }
 
@@ -35,11 +67,13 @@ a:link{
     font-family: 'Bebas Neue';
 }
 
-.card-co a:link{
-    text-decoration: none;
+.card-co{
+    border:none ;
+    padding: 0px;
+    background-color: white;
 }
 
-.card-co a:hover{
+.card-co :hover{
     color: #007bff;
 }
 
@@ -50,8 +84,9 @@ a:link{
 
 .cimg{
     height: 100%;
-    object-fit: fill;
+    object-fit: cover;
 }
+
 
 .contenido{
     margin: 40px 250px 40px 250px;
@@ -69,3 +104,24 @@ a:link{
     padding: 0px;
     object-fit: cover;
 }
+
+.modal-img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.mod-tamanio{
+    align-self: center;
+    right: 50%;
+    width: 1000px;
+}
+
+.table-titulo{
+    font-size: medium;
+}
+
+td{
+    font-size: small;
+}
+
