--- a/style.css
+++ b/style.css
@@ -1,31 +1,19 @@
 body{
-    overflow-x: hidden;
     height: 100vh;
     width: 100vw;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
-
-/*
-Clases para lineas verticas 
-de la pagina
-.side-line-r{
-    position: fixed;
-    margin: 0px;
-    padding: 0px;
-    left: 0;
-    z-index: 100;
-    height: 100%;
-}
-
-.side-line-l{
-    position: fixed;
-    margin: 0px;
-    padding: 0px;
-    right: 0;
-    z-index: 100;
-    height: 100%;
-
+/*.nav-clase{
+    background-color: red;
 }*/
+
+.carousel-tamanio{
+    width: 100vw;
+}
 
 p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -89,14 +77,11 @@ a:link{
 
 
 .contenido{
-    margin: 40px 250px 40px 250px;
     text-align: justify;
 }
 
 .card-t{
-    width: 100px;
     padding: 0px;
-    object-fit: cover;
 }
 
 .card-t-img{
@@ -112,9 +97,12 @@ a:link{
 }
 
 .mod-tamanio{
-    align-self: center;
     right: 50%;
     width: 1000px;
+}
+
+.td-tamanio{
+    font-size: small;
 }
 
 .table-titulo{
@@ -123,5 +111,11 @@ a:link{
 
 td{
     font-size: small;
+}
+
+@media (max-width: 577){
+    td{
+        font-size: x-small;
+    }
 }
 
